pruebaFinal/force-app/main/default/objects/Account/fields/Llave_Unica_Documento__c.field-meta.xml
<CustomField>
    <fullName>Llave_Unica_Documento__c</fullName>
    <externalId>true</externalId>
    <label>Llave_Unica_Documento</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>