pruebaFinal/force-app/main/default/objects/Account/fields/Numero_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Documento__c</fullName>
    <label>Numero de Documento</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>