pruebaFinal/force-app/main/default/objects/Account/fields/Situacion_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Situacion_Laboral__c</fullName>
    <label>Situacion Laboral</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>situacionLaboralAccount</valueSetName>
    </valueSet>
</CustomField>