pruebaFinal/force-app/main/default/objects/Account/fields/Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDocumento</valueSetName>
    </valueSet>
</CustomField>