pruebaFinal/force-app/main/default/objects/Account/validationRules/Fecha_Nacimiento_Coherente.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Nacimiento_Coherente</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Fecha_de_nacimiento__c &gt; TODAY(),
    Fecha_de_nacimiento__c &lt; TODAY() - (120 * 365.2425)
)</errorConditionFormula>
    <errorDisplayField>Fecha_de_nacimiento__c</errorDisplayField>
    <errorMessage>La fecha de nacimiento no puede ser futura ni mayor a 120 años de antigüedad.</errorMessage>
</ValidationRule>